--- a/ansible/roles/app/templates/Dockerfile.j2
+++ b/ansible/roles/app/templates/Dockerfile.j2
@@ -1,4 +1,4 @@
-FROM python:3.6-alpine
+FROM {{ app_base_image }}
 
 # Install required packages
 RUN apk add --update --no-cache make libc-dev python3-dev linux-headers gcc
