--- a/ansible/templates/Dockerfile.j2
+++ b/ansible/templates/Dockerfile.j2
@@ -1,13 +1,13 @@
 FROM {{ app_base_image }}
 
 # Install required packages
-RUN apk add --update --no-cache make libc-dev python3-dev linux-headers gcc
+RUN apk add --update --no-cache make libc-dev python3-dev linux-headers gcc postgresql-dev
 
 # Copy application distribution package
 COPY {{ app_name }}-{{ app_version }}.tar.gz /root/
 
 # Install application package
-RUN pip install --no-cache-dir -U pip && pip install --no-cache-dir /root/{{ app_name }}-{{ app_version }}.tar.gz
+RUN pip install --no-cache-dir -U pip && pip install --no-cache-dir psycopg2 /root/{{ app_name }}-{{ app_version }}.tar.gz
 
 EXPOSE {{ app_server_port }}
 
